[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/scripts/Stats.gd" type="Script" id=1]

[node name="Stats" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -73.0
margin_right = 1.0
margin_bottom = 158.0

[node name="CenterContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 74.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer"]
margin_right = 38.0
margin_bottom = 14.0
text = "Level:"

[node name="LevelLabel" type="Label" parent="VBoxContainer/CenterContainer"]
margin_left = 42.0
margin_right = 50.0
margin_bottom = 14.0
text = "1"

[node name="CenterContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 74.0
margin_bottom = 32.0

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer2"]
margin_right = 54.0
margin_bottom = 14.0
text = "Rockets:"

[node name="RocketLabel" type="Label" parent="VBoxContainer/CenterContainer2"]
margin_left = 58.0
margin_right = 66.0
margin_bottom = 14.0
text = "1"
